# Win-Top

./: .env.example  .gitignore  API_DOCUMENTATION.md  CONTRIBUTING.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  USAGE_GUIDE.md  VALIDATION_REPORT.md  check-proc.ps1  demo.py  gen-icon.ps1  index.html  package-lock.json  package.json  requirements.txt  setup.py  vite.config.js
docs/: build-env.md  plan.md  release-process.md  requirements.md  tech-spec.md
docs/superpowers/plans/: 2026-06-14-per-process-network-rate.md  2026-06-15-optimize-center.md
docs/superpowers/specs/: 2026-06-14-per-process-network-rate-design.md  2026-06-15-optimize-center-design.md
poc-native/: Cargo.toml  nettraffic-poc.txt
poc-native/src/: main.rs
src/: App.svelte  __init__.py  data.js  index.html  main.js  main.py  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_inventory.rs  app_score.rs  cleanup.rs  collector.rs  disk.rs  disk_io.rs  disk_usage.rs  events.rs  export.rs  file_unlock.rs  firewall.rs  footprint.rs  geoip.rs  gpu.rs  health_check.rs  history.rs  main.rs  memboost.rs  mft_scan.rs  nettraffic.rs  network.rs  privilege.rs  process.rs  restore.rs  scheduler.rs  services.rs  startup.rs  uninstall.rs  usage_stats.rs  visual_effects.rs
src/lib/: aiClient.js  markdown.js  stores.js
src/lib/components/: ChatMessage.svelte  Icon.svelte  Modal.svelte  Sidebar.svelte  Toast.svelte  TopBar.svelte
src/lib/views/: About.svelte  Assistant.svelte  Disk.svelte  Events.svelte  Network.svelte  Optimize.svelte  Overview.svelte  Placeholder.svelte  Processes.svelte  Tools.svelte  Uninstall.svelte
src/modules/: __init__.py  ai_assistant.py  network_manager.py  process_manager.py  system_monitor.py  windows_commands.py
src/ui/: __init__.py  main_window.py
src/utils/: __init__.py  config.py
