[package]
name = "win-top"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sysinfo = "0.30"

[features]
custom-protocol = ["tauri/custom-protocol"]
