[package]
name = "win-top"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
tauri = { version = "1.5", features = ["api-all"] }

[target.'cfg(windows)'.build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
