[package]
name = "win-top"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.11", features = ["blocking"] }

[target.'cfg(windows)'.dependencies]
tauri = { version = "1.5", features = ["api-all"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Performance",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
  "Wdk_System_SystemInformation",
] }
netstat2 = "0.9"
wmi = "0.14"
ferrisetw = "1"

[target.'cfg(windows)'.build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
